--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
              if (s < 0) {
                  window.location = "https://mobihack.me/";
              } else {
-                 document.getElementById("c").innerHTML = seconds;
+                 document.getElementById("c").innerHTML = s;
                  window.setTimeout("c()", 1000);
              }
          }
